[package]
name = "dusk-kelvin-map"
version = "0.1.1"
authors = ["Victor Lopez <victor@dusk.network>"]
edition = "2018"
description = "BST Map implementation with Microkelvin backend"
repository = "https://github.com/dusk-network/dusk-kelvin-map"
readme = "README.md"
license = "MPL-2.0"
categories = ["data-structures", "embedded", "no-std", "wasm"]

[dependencies]
microkelvin = "0.5" 
canonical = "0.4"
canonical_derive = "0.4"

[dev-dependencies]
canonical_host = "0.4"
rand = "0.7"
