[package]
name = "dusk-kelvin-map"
version = "0.4.0"
authors = ["Victor Lopez <victor@dusk.network>"]
edition = "2018"
description = "BST Map implementation with Microkelvin backend"
repository = "https://github.com/dusk-network/dusk-kelvin-map"
readme = "README.md"
license = "MPL-2.0"
categories = ["data-structures", "embedded", "no-std", "wasm"]

[dependencies]
microkelvin = "0.7"
canonical = "0.6"
canonical_derive = "0.6"

[dev-dependencies]
rand = "0.8"

